--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="drawer_close">Close navigation drawer</string>
     <string name="draweraction_search">Search</string>
     <string name="search_hint">Search for things to do, places to stay, etc.</string>
+    <string name="title_activity_searchresults">Search Results</string>
+    
+    <string name="debug_query">Your Query: </string>
 
 </resources>
