--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="draweraction_search">Search</string>
-    <string name="search_hint">Search for things to do, places to stay, etc.</string>
-    <string name="title_activity_searchresults">Search Results</string>
+    <string name="search_hint">Experiences, lodgings, people, etc.</string>
+    <string name="title_activity_search">Search Results</string>
     
-    <string name="debug_query">Your Query: </string>
+    <string name="debug_query">DEBUGGING - Your Query (if shown then your query is in SearchActivity class): </string>
 
 </resources>
